<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#EBEBEB"
    tools:context=".burguers">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="513dp"
                android:layout_height="1042dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="1dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtBurguer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/burguer"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="329dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtClassic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="@string/classic"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtClassicDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/classic_desc"
                            android:textColor="@color/black"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/txtCheddar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="@string/cheddarLove"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtCheddarDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cheddar_desc"
                            android:textColor="@color/black"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/txtBarbecue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="@string/barbecue"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtBarbecueDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/barbecue_desc"
                            android:textColor="@color/black"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/txtChicken"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="@string/chicken"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtChickenDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/chicken_desc"
                            android:textColor="@color/black"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/txtMonstro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="@string/monstro"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtMonstroDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/monstro_desc"
                            android:textColor="@color/black"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/txtPicante"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="@string/picante"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtPicanteDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/picante_desc"
                            android:textColor="@color/black"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/txtTropical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="@string/tropical"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtTropicalDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tropical_desc"
                            android:textColor="@color/black"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/txtTrufado"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="@string/trufado"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtTrufadoDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/trufado_desc"
                            android:textColor="@color/black"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/txtSupreme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="@string/supreme"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtSupremeDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/supreme_desc"
                            android:textColor="@color/black"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/txtVeggie"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="@string/veggie"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtVegDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/veggie_desc"
                            android:textColor="@color/black"
                            android:textStyle="italic" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="86dp"
                            android:layout_marginTop="25dp"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/btnVoltar2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="20dp"
                                android:layout_weight="1"
                                android:backgroundTint="#00FFFFFF"
                                android:text="@string/voltar"
                                android:textColor="@color/black"
                                android:textSize="24sp"
                                app:cornerRadius="5dp"
                                app:strokeColor="@color/black"
                                app:strokeWidth="2dp" />

                            <Button
                                android:id="@+id/btnProx2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="20dp"
                                android:layout_weight="1"
                                android:backgroundTint="#00FFFFFF"
                                android:text="@string/proximo"
                                android:textColor="@color/black"
                                android:textSize="24sp"
                                app:cornerRadius="5dp"
                                app:strokeColor="@color/black"
                                app:strokeWidth="2dp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="154dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"></LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>